# texmacs

./: .gitignore  CMakeLists.txt  COMPILE  COPYING  Makefile.in  README.md  SVNREV  TODO  aclocal.m4  config.guess  config.sub  configure  configure.in
TeXmacs/: CMakeLists.txt  COPYING  INSTALL
TeXmacs/doc/: index.es.tm
TeXmacs/doc/about/: about-summary.de.tm  about-summary.en.tm  about-summary.es.tm  about-summary.fr.tm  about-summary.it.tm  about-summary.zh.tm  about.en.tm  about.es.tm  about.fr.tm  about.it.tm  about.zh.tm
TeXmacs/doc/all/: plugins.en.tm
TeXmacs/doc/api/: index.en.tm  init-buffer.en.tm  init-texmacs.en.tm  template.en.tm
TeXmacs/doc/main/: man-manual.de.tm  man-manual.en.tm  man-manual.es.tm  man-manual.fr.tm  man-manual.it.tm  man-manual.pl.tm  man-manual.pt.tm  man-manual.zh.tm  man-manual.zh.tmml  man-reference.zh.tm  man-user-manual.de.tm  man-user-manual.en.tm  man-user-manual.es.tm  man-user-manual.fr.tm  man-user-manual.it.tm  man-user-manual.pl.tm  man-user-manual.pt.tm  man-user-manual.zh.tm
TeXmacs/doc/plugins/: plugins.it.tm
TeXmacs/examples/texts/: accent-test.tm  arg_func.tm  arrow-test.tm  bbb-test.tm  big-test.tm  bigtable-test.tm  bracket-test.tm  font-test.tm  greek-test.tm  hat-test.tm  java-test.tm  kerning-test.tm  language-cpp-test.tm  language-dot-test.tm  language-fortran-test.tm  language-java-test.tm  language-python-test.tm  language-r-test.tm  language-scala-test.tm  literate-article-test.tm  operator-test.tm  python-test.tm  relation-test.tm  roman-sub-test.tm  roman-sup-test.tm  root-test.tm  rs-test.tm  scala-test.tm  scheme-session-test.tm  subscript-test-bis.tm  subscript-test.tm  superscript-test-bis.tm  superscript-test.tm  tmfs-test.tm  torture-fonts-1.tm  torture-fonts-2.tm  torture-images.tm  traditional-font-test.tm  unicode-missing-test.tm  wide-test.tm
TeXmacs/fonts/: LATEX_LICENSE  LICENSE  emu-bracket.vfn  font-characteristics.scm  font-database.scm  font-features.scm  font-substitutions.scm  pdf-font-issues.scm
TeXmacs/fonts/enc/: adobe-math.enc  alpha.enc  (+31 more)
TeXmacs/include/: TeXmacs.h
TeXmacs/progs/: init-buffer.scm  init-texmacs-s7.scm  init-texmacs.scm  text-drd.scm  text-natbib.scm  text-structure.scm  tm-mode.el
TeXmacs/styles/: article.ts  beamer.ts  book.ts  browser.ts  exam.ts  generic.ts  letter.ts  poster.ts  seminar.ts  source.ts
misc/: CMakeLists.txt
misc/admin/: admin.makefile  admin.makefile.in  appcast.xml  bump_version  pr  sign_update  texmacs_updates_dsa_pub.pem  verinfo.sh
misc/autotroll/: autotroll.m4  test.sh
misc/benchmark/: CMakeLists.txt
misc/bundle/: Base.xcconfig.in  Info-Xcode.plist  Info.plist  TeXmacs-document.icns  TeXmacsQt.xcconfig  bundle-libs.sh  deploy.sh
misc/centos/: texmacs.spec
misc/debian/: changelog  control  docs  files  texmacs.substvars
misc/fedora/: texmacs.spec
misc/git/: submodules.sh
misc/m4/: axel.m4  cairo.m4  dlopen.m4  freetype.m4  gs.m4  guile.m4  hummus.m4  iconv.m4  imlib2.m4  m4-AX_SUBDIRS_CONFIGURE.m4  m4-ax_append_flag.m4  m4-ax_check_compile_flag.m4  m4-ax_save_flags.m4  m4-lc_flag_utils.m4  mupdf.m4  poppler.m4  qt.m4  qt5.m4  sparkle.m4  sql.m4  tm_android.m4  tm_debug.m4  tm_fastalloc.m4  tm_gui.m4  tm_install.m4  tm_macos.m4  tm_optimize.m4  tm_platform.m4  tm_repo.m4  tm_sign.m4  tm_static.m4  tm_subversion.m4  tm_version.m4  tm_windows.m4  x11.m4
misc/man/: fig2ps.1  texmacs.1.in
misc/mandriva/: texmacs.spec
misc/redhat/: TeXmacs.spec  TeXmacs.spec.in
misc/rpm/: TeXmacs.spec  TeXmacs.spec.in
misc/scripts/: fig2ps.in  texmacs.in  tm_gs
misc/tm-devel-mac/: Makefile  configure-tm  lipofy.sh
misc/vscode/: c_cpp_properties.json.in
misc/windows/: TeXmacs.iss  configure-tm-i686-pc-mingw32.txt  configure-tm-mingw-cross-env
plugins/: CMakeLists.txt  README.md  test
plugins/axiom/: CMakeLists.txt  Makefile
plugins/backtrace/: README
plugins/buffer-replace/: README
plugins/coq/: CMakeLists.txt  Makefile
plugins/french-postfix/: README
plugins/french-punctuation/: README
plugins/graphviz/: CMakeLists.txt  Makefile
plugins/hide-show/: README
plugins/interactive-proc/: README
plugins/maple/: CMakeLists.txt  Makefile  Makefile.9
plugins/mathematica/: Makefile  Makefile.lazy
plugins/matlab/: README.md
plugins/maxima/: Makefile  README.md
plugins/mycas/: readme.tm
plugins/octave/: CONTRIBUTING.md  README.md
plugins/positions/: README
plugins/proclus/: TODO
plugins/python/: README.md
plugins/r/: CMakeLists.txt  Makefile  README.md  Rprofile  texmacs.r
plugins/sage/: README.md
plugins/shell/: CMakeLists.txt  Makefile
plugins/smart-space/: README
plugins/switch-buffer/: README
plugins/texgraph/: LisezMoi.txt  ReadMe.txt  texgraph_macros_texmacs.mac
plugins/tmpy/: README.md  asymptote.py  capture.py  compat.py  completion.py  feynmf.py  graph.py  graphviz.py  latex.py  mermaid.py  pdflatex.py  plantuml.py  postscript.py  protocol.py  tikz.py  xypic.py
plugins/tools/: Makefile
server/: Makefile.in  aclocal.m4  configure  configure.in
src/: CMakeLists.txt  COMPILE  COPYING  LICENSE  MacOSXBundleInfo.plist.in  Makefile.in  TODO  aclocal.m4  configure  configure.in  deps.makefile  makefile  makefile.in
src/Edit/: editor.hpp
src/Guile/: guile.hpp  scheme.hpp
src/Resource/: bitmap_font.hpp  converter.hpp  dictionary.hpp  font.hpp  language.hpp  resource.hpp
src/Scheme/: scheme.hpp
src/System/: config.h.cmake  config.in  tm_configure.hpp.cmake  tm_configure.in
src/TeXmacs/: COPYING  README  TEX_FONTS
src/Texmacs/: server.hpp  tm_buffer.hpp  tm_config.hpp  tm_data.hpp  tm_frame.hpp  tm_layout.hpp  tm_project.hpp  tm_scheme.hpp  tm_server.hpp  tm_widget.hpp  tm_window.hpp
src/Typeset/: boxes.hpp  env.hpp  formatter.hpp  typesetter.hpp
src/Window/: display.hpp  message.hpp  ps_device.hpp  renderer.hpp  widget.hpp  window.hpp
src/cmake/: CheckCSourceCompiles.cmake  FindCairo.cmake  FindGuile.cmake  FindImlib2.cmake  LibFindMacros.cmake
src/src/: CMakeLists.txt  common.makefile.in  deps.makefile  makefile  makefile.in
tests/Kernel/: CMakeLists.txt
(+9317 files in other folders)
